--- a/theme/css/cgi_theme.css
+++ b/theme/css/cgi_theme.css
@@ -17,13 +17,10 @@ body {
 }
 
 h1 {
-	padding:0em 0px 0px 0px;
-	margin:0px 0px 0.2em 0px;
 	color:#2f2f2f;
 	font-family:sans-serif;
 	font-size:1.75em;
 	font-weight:normal;
-	line-height:1.1;
 }
 
 h2 {
@@ -40,19 +37,26 @@ h3 {
 }
 
 h4, p, li {
-	font-family:Arial,sans-serif;
+	font-family:Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 	font-weight:normal;
 }
 
 p, li {
 	color: #000000;
-	line-height: 1em;
-	padding: 0.2em 0 0.9em
+	padding: 0 0 0.25em 0;
 }
 
 p a,
 ul li a {
 	color: #0f4a84;
+}
+
+a:visited {
+        color: #0f4a84;
+}
+
+a:hover {
+	color:blue;
 }
 
 .figure {
@@ -126,7 +130,7 @@ td#quote {
 div#ga-nav {
 	font-size: 1em;
 	font-family:sans-serif;
-	text-align:right;
+	text-align:center;
 	margin:20px 0 0 0;
 }
 
