--- a/theme/css/cgi_theme.css
+++ b/theme/css/cgi_theme.css
@@ -18,20 +18,20 @@ body {
 
 h1 {
 	color:#2f2f2f;
-	font-family:sans-serif;
+        font-family:Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 	font-size:1.75em;
 	font-weight:normal;
 }
 
 h2 {
 	font-size:1.25em;
-	font-family:sans-serif;
+        font-family:Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 	font-weight:bold;
 }
 
 h3 {
         font-size:1.25em;
-        font-family:sans-serif;
+        font-family:Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;	
         font-weight:bold;
 
 }
